--- a/Presentation/Views/CollectionMain.xaml
+++ b/Presentation/Views/CollectionMain.xaml
@@ -6,6 +6,13 @@
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
 
+    xmlns:dx="http://schemas.devexpress.com/winfx/2008/xaml/core"
+    xmlns:dxdb="http://schemas.devexpress.com/winfx/2008/xaml/demobase"
+    xmlns:dxdo="http://schemas.devexpress.com/winfx/2008/xaml/docking"
+    xmlns:dxe="http://schemas.devexpress.com/winfx/2008/xaml/editors"
+    xmlns:dxg="http://schemas.devexpress.com/winfx/2008/xaml/grid"
+    xmlns:dxlc="http://schemas.devexpress.com/winfx/2008/xaml/layoutcontrol"
+    
     xmlns:vncmvvm="clr-namespace:VNC.Core.Mvvm;assembly=VNC.CoreNF"
     xmlns:local="clr-namespace:AZDORestApiExplorer.Presentation.Views"
     
@@ -14,83 +21,30 @@
     xmlns:infra="clr-namespace:AZDORestApiExplorer.Core"
     prism:ViewModelLocator.AutoWireViewModel="True"
     mc:Ignorable="d"
-    d:DesignHeight="450" d:DesignWidth="800"
+    d:DesignHeight="200" d:DesignWidth="600"
 >
-    <StackPanel Grid.Column="0" Margin="3">
-        <Label Content="Available Collections" />
-        <ComboBox x:Name="CB1OC"
-                        ItemsSource="{Binding AvailableCollections}"
-                              DisplayMemberPath="Name"
-                              SelectedValuePath="Details"
-                              SelectedItem="{Binding SelectedCollection, Mode=TwoWay}">
-        </ComboBox>
-        <StackPanel Orientation="Vertical" >
-            <StackPanel Orientation="Horizontal">
-                <Label Content="Uri" Width="22"/>
-                <TextBox x:Name="TB1OC" Text="{Binding SelectedCollection.Details.Uri }" Width="320"/>
-            </StackPanel>
-            <StackPanel Orientation="Horizontal" >
-                <Label Content="PAT" Width="22"/>
-                <TextBox x:Name="TB2OC" Text="{Binding SelectedCollection.Details.PAT }" Width="320" ToolTip="Paste in PAT" Background="LightSalmon" />
-            </StackPanel>
-        </StackPanel>
-    </StackPanel>
-    <!--<UserControl.Resources>
-        --><!--These are implicit DataTemplates--><!--
-        <DataTemplate DataType="{x:Type viewModels:CollectionDetailViewModel}">
-            <views:CollectionDetail />
-        </DataTemplate>
-        --><!-- <DataTemplate DataType="{x:Type viewModels:MeetingDetailViewModel}"> -->
-            <!-- <views:MeetingDetail /> -->
-        <!-- </DataTemplate> --><!--
-        <DataTemplate DataType="{x:Type viewModels:DetailViewModel}">
-            <views:Detail />
-        </DataTemplate>
-    </UserControl.Resources>
+    <dxlc:LayoutGroup Header="Enter Orgnzation Information"
+    	View="Group" Orientation="Horizontal" HorizontalAlignment="Left" >
+        
+        <dxlc:LayoutItem Label="Available Collections" >
+            <ComboBox
+                ItemsSource="{Binding AvailableCollections}"
+                DisplayMemberPath="Name"
+                SelectedValuePath="Details"
+                SelectedItem="{Binding SelectedCollection, Mode=TwoWay}">
+            </ComboBox>
+        </dxlc:LayoutItem>
+        
+        <dxlc:LayoutItem Label="Uri">
+            <dxe:TextEdit Text="{Binding SelectedCollection.Details.Uri }" />
+        </dxlc:LayoutItem>
+        
+        <dxlc:LayoutItem Label="PAT">
+            <TextBox Text="{Binding SelectedCollection.Details.PAT }" 
+                     Width="320" ToolTip="Paste in Personal Access Token (PAT)" 
+                     Background="LightGreen" />
+        </dxlc:LayoutItem>
 
-    <Grid>
-        <Grid.RowDefinitions>
-            <RowDefinition Height="Auto" />
-            <RowDefinition />
-        </Grid.RowDefinitions>
-        <Grid.ColumnDefinitions>
-            <ColumnDefinition Width="200" />
-            <ColumnDefinition />
-        </Grid.ColumnDefinitions>
-        <Menu Grid.ColumnSpan="2" FontSize="18">
-            <MenuItem Header="Create">
-                <MenuItem Header="Add Collection" Command="{Binding CreateNewDetailCommand}"
-                          CommandParameter="{x:Type viewModels:CollectionDetailViewModel}" />
-                --><!--<MenuItem Header="Add Meeting" Command="{Binding CreateNewDetailCommand}"
-                          CommandParameter="{x:Type viewModels:MeetingDetailViewModel}" />--><!--
-            </MenuItem>
-            <MenuItem Header="Edit">
-                <MenuItem Header=""
-                            Command="{Binding OpenSingleDetailViewCommand}"
-                            CommandParameter="{x:Type viewModels:DetailViewModel}" />
-            </MenuItem>
-        </Menu>
+    </dxlc:LayoutGroup>
 
-        <ContentControl Grid.Row="1" Grid.Column="0"
-                        prism:RegionManager.RegionName="{x:Static infra:RegionNames.CollectionNavigationRegion}"
-                        DataContext="{Binding NavigationViewModel}" />
-
-        <TabControl Grid.Row="1" Grid.Column="1"
-                    ItemsSource="{Binding DetailViewModels}"
-                    SelectedItem="{Binding SelectedDetailViewModel, Mode=TwoWay}">
-            <TabControl.ItemTemplate>
-
-                <DataTemplate>
-                    <StackPanel Orientation="Horizontal">
-                        <TextBlock Text="{Binding Title}" />
-                        <TextBlock Text="*" Visibility="{Binding HasChanges,
-                            Converter={StaticResource booleanToVisibilityConverter}}" />
-                        <Button Command="{Binding CloseDetailViewCommand}"
-                                VerticalAlignment="Top" Margin="2"
-                                Content="x" FontSize="20" />
-                    </StackPanel>
-                </DataTemplate>
-            </TabControl.ItemTemplate>
-        </TabControl>
-    </Grid>-->
 </vncmvvm:ViewBase>
