--- a/Presentation/Views/Core/Project_Main.xaml
+++ b/Presentation/Views/Core/Project_Main.xaml
@@ -1,5 +1,5 @@
 ﻿<vncmvvm:ViewBase
-    x:Class="AZDORestApiExplorer.Presentation.Views.ProjectMain"
+    x:Class="AZDORestApiExplorer.Presentation.Views.Core.Project_Main"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:prism="http://www.codeplex.com/prism"
